k8s/tomato-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomato-api
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: tomato-api
  template:
    metadata:
      labels:
        app: tomato-api
    spec:
      imagePullSecrets: [{name: github-auth}]
      
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: ["tomato-api"]
              topologyKey: "kubernetes.io/hostname"

      # ---  Pod Level ---
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000

      containers:
      - name: tomato-api
        image: ghcr.io/arindamdas07/tomato-mlops-platform-api:latest
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true 
          runAsUser: 1000
        resources:
          requests: { cpu: "100m", memory: "256Mi" }
          limits: { cpu: "500m", memory: "512Mi" }
        readinessProbe:
          httpGet: { path: /health, port: 8000 }
          initialDelaySeconds: 20 
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /health, port: 8000 }
          initialDelaySeconds: 30
          periodSeconds: 15
        volumeMounts:
        - name: shared-uploads
          mountPath: /app/uploads
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: shared-uploads
        persistentVolumeClaim: { claimName: tomato-upload-pvc }
      - name: tmp-volume
        emptyDir: {}
