k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomato-api-service
  labels:
    app: tomato-api
spec:
  # --- THE SENIOR FIX: Headless Service ---
  # clusterIP: None tells K8s NOT to give this service a single IP.
  # This allows Nginx to see individual Pod IPs for true 'least_conn' balancing.
  clusterIP: None 
  
  selector:
    app: tomato-api # This MUST match the labels in your tomato-api-deployment.yaml
    
  ports:
    - protocol: TCP
      port: 80        # The port Nginx will use (tomato-api-service:80)
      targetPort: 8000 # The port your FastAPI app is listening on
