k8s/mlflow-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: ghcr.io/mlflow/mlflow:v2.12.1
        ports:
        - containerPort: 5000
          name: mlflow-port
        
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"

        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 20 # Give time for 'pip install' and DB connection
          periodSeconds: 10

        command: ["/bin/sh", "-c"]
        args:
          - |
            pip install psycopg2-binary;
            mkdir -p /app/uploads/artifacts;
            
            mlflow server \
              --host 0.0.0.0 \
              --port 5000 \
              --backend-store-uri postgresql://${DB_USER}:${DB_PASS}@postgres:5432/${DB_NAME} \
              --default-artifact-root /app/uploads/artifacts \
              --serve-artifacts
              
        volumeMounts:
        - name: shared-storage
          mountPath: /app/uploads
          subPath: system-data/mlflow-data 
      
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: tomato-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  type: LoadBalancer 
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: mlflow
